--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@ body {background-color: rgb(240, 248, 255);
 }
 
 /*image ronde et description en dessous*/
-img {border-radius: 100%;}
+img:not(section=".case-reseau") {border-radius: 100%;}
 figcaption {margin-left: 30px;}
 
 /*Police des textes*/
@@ -128,4 +128,20 @@ input:checked {
 footer a {
     color: rgb(0, 255, 255);
     margin-left: 20px;
+}
+
+.case-reseau img {
+    height: 75px;
+    width: 100px;
+
+}
+
+.case-reseau {
+    text-align: center;
+    border: solid 3px black;
+    border-radius: 15px;
+    padding: 20px;
+    margin-bottom: 20px;
+    width: 300px;
+    height: 150px;
 }
